--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-async-errors": "^3.1.1",
     "jest": "^29.1.2",
     "joi": "^17.6.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "prisma": "^4.4.0",
