--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "back-end for a predictor solution",
   "main": "index.ts",
   "scripts": {
-    "test": "dotenv -e .env.test nodemon src/server.ts"
+    "build": "tsc && npx prisma migrate deploy && npx prisma db seed",
+    "test": "dotenv -e .env.test nodemon src/server.ts",
+    "start": "node dist/src/server.js",
+    "dev": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
