--- a/package.json
+++ b/package.json
@@ -52,8 +52,16 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
