--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@faker-js/faker": "^7.5.0",
     "@prisma/client": "^4.4.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
