--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^4.4.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
