--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ts-jest": "^29.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
